[project]
name = "kim_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
my-history = "kim_args_history.cli:cmd"

[project.urls]
Homepage = "https://github.com/rlaehgus97/kim_args_history/issues"
Issues = "https://github.com/rlaehgus97/kim_args_history/issues"
